<resources>
    <string name="app_name">Cafe Lite</string>
    <string name="welcome">Welcome</string>
    <string name="username_hint">Username</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="cafe_lite_logo">Cafe Lite logo</string>
    <string name="greetings">Hello, %s! What would you like?</string>
    <string name="tea">Tea</string>
    <string name="coffee">Coffee</string>
    <string name="additives">What to add to your %s?</string>
    <string name="sugar">Sugar</string>
    <string name="milk">Milk</string>
    <string name="lemon">Lemon</string>
    <string name="choose_the_drink_type">Choose the drink type</string>
    <string name="make_order">Make order</string>
    <string name="name">Name:</string>
    <string name="drink">Drink:</string>
    <string name="type_of_drink">Type of drink:</string>
    <string name="additives_lable">Additives:</string>
    <string name="error_fields_empty">Please fill in all the fields</string>

    <array name="types_of_tea">
        <item>Green</item>
        <item>Black</item>
    </array>

    <array name="types_of_coffee">
        <item>Americano</item>
        <item>Espresso</item>
        <item>Latte</item>
    </array>
</resources>